<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app">O aplikaciji</string>
    <string name="activity_settings">Postavke</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_for_prayer">Alarm za %1$s</string>
    <string name="alarm_is_missed_for">Propušten je alarm za %1$s</string>
    <string name="alarm_missed">Alarm propušten</string>
    <string name="alarm_missed_for">Propušten alarm za %1$s</string>
    <string name="alarm_sound">Zvuk za alarm</string>
    <string name="all_prayers_in_notif">Sva vremena u notifikaciji</string>
    <string name="all_prayers_not_shown_in_notif">Sva vremena se ne prikazuju u notifikaciji</string>
    <string name="all_prayers_shown_in_notif">Sva vremena se prikazuju u notifikaciji</string>
    <string name="app_name">Vaktija.ba</string>
    <string name="application">Aplikacija</string>
    <string name="ask_no_more">Ne pitaj više</string>
    <string name="button_close">Zatvori</string>
    <string name="button_open_settings">Otvori postavke</string>
    <string name="cancel">Odustani</string>
    <string name="cant_use_selected_tone">Odabrani zvuk se ne može koristiti, odaberite drugi.</string>
    <string name="copy">Copy</string>
    <string name="crash_toast_text">Vaktija crashed. Send report please.</string>
    <string name="date_in_subtitle">Datum ispod naziva lokacije</string>
    <string name="dev_email">android@vaktija.ba</string>
    <string name="dhuhr_calculation">Vrijeme podne namaza</string>
    <string name="dhuhr_calculation_summary">Računanje vremena za podne namaz</string>
    <string name="dhuhr_counting">Vrijeme podne namaza</string>
    <string name="dhuhr_prayer">Podne namaz</string>
    <string name="dialog_message_analytics_opt_out">"Vaktija koristi Google Analytics za izvještavanje o korištenju aplikacije.

Da li želite isključiti izvještavanje?"</string>
    <string name="dialog_no">Ne</string>
    <string name="dialog_title_analytics_opt_out_title">Google Analytics</string>
    <string name="dialog_yes">Da</string>
    <string name="dnd_mode_configured">DnD omogućen</string>
    <string name="dnd_mode_not_configured">Nedostaje permisija za DnD</string>
    <string name="done">GOTOVO</string>
    <string name="doze_mode">Vaktija i Doze Mode</string>
    <string name="doze_mode_configured">Doze podešen</string>
    <string name="doze_mode_message">Da bi alarmi radili ispravno Vaktiju je potrebno dodati u listu aplikacija za koje se ne primjenjuju optimizacije za potrošnju baterije.</string>
    <string name="doze_mode_not_configured">Doze nije podešen</string>
    <string name="expand_button_title">Advanced</string>
    <string name="feedback">Feedback</string>
    <string name="friday">pet</string>
    <string name="google_analytics">Google Analytics</string>
    <string name="label_dnd_mode">Do Not Disturb permisija</string>
    <string name="label_dnd_mode_description">"Potrebno je aplikaciji dozvoliti upravljanje DnD postavkama kako bi gašenje zvukova radilo pouzdano.

Bez Do Not Disturb permisije, gašenje zvukova neće raditi."</string>
    <string name="label_dnd_mode_set">Upravljanje Do Not Disturb modom omogućeno</string>
    <string name="label_dont_ask_again">Ne prikazuj ovaj ekran ponovo</string>
    <string name="label_doze_mode">Doze mod</string>
    <string name="label_doze_mode_description">Potrebno je aplikaciju dodati na listu aplikacija na koje se ne odnose restrikcije za koršitenje baterije</string>
    <string name="label_doze_mode_set">Doze mod podešen</string>
    <string name="label_system_settings_info">Da bi Vaktija radila optimalno, potrebno je da se podese neke sistemske postavke.</string>
    <string name="location">Lokacija</string>
    <string name="monday">pon</string>
    <string name="no_email_app_found">Nije pronađena aplikacija koja može poslati email</string>
    <string name="no_sounds_till">Bez zvukova do %1$s</string>
    <string name="not_set">Not set</string>
    <string name="notif_alarms_channel_desc">Notifikacije za alarme</string>
    <string name="notif_approaching_channel_desc">Notifikacije za namaze koji nastupaju uskoro</string>
    <string name="notif_default_channel_desc">Generalne notifikacije</string>
    <string name="notification_sound">Zvuk za notifikacije</string>
    <string name="notifications">Notifikacije</string>
    <string name="ok">Uredu</string>
    <string name="open_settings">Otvori postavke</string>
    <string name="play_url">https://play.google.com/store/apps/details?id=ba.vaktija.android</string>
    <string name="prayer_times_for_date">Vaktija za %1$s</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="prefs_alarm_tone">Zvuk za alarm</string>
    <string name="prefs_alarm_tone_summary">Zvuk za alarm…</string>
    <string name="prefs_alarms">Alarm</string>
    <string name="prefs_export_title">Eksportuj postavke</string>
    <string name="prefs_feedback_email_ready">mailto:android@vaktija.ba</string>
    <string name="prefs_feedback_subject">Vaktija za Android (v%1$s)</string>
    <string name="prefs_feedback_summary">Pošalji prijedlog, prijavi bug…</string>
    <string name="prefs_feedback_title">Dojam</string>
    <string name="prefs_ga_disabled">Google Analytics je isključen</string>
    <string name="prefs_ga_enabled">Google Analytics je uključen</string>
    <string name="prefs_ga_title">Google Analytics</string>
    <string name="prefs_import_title">Importuj postavke</string>
    <string name="prefs_notification_tone">Zvuk za notifikacije</string>
    <string name="prefs_notification_tone_summary">Klikni da odabereš zvuk…</string>
    <string name="prefs_separateJumaSettings_disabled">Neće biti razlike između postavki za podne i džumu</string>
    <string name="prefs_separateJumaSettings_enabled">Koristit će se posebne postavke za džumu. Npr.: zvukovi će biti ugašeni duže nego za podne.</string>
    <string name="prefs_separateJumaSettings_title">Posebne postavke za džumu</string>
    <string name="prefs_showDate_disabled">Datum se neće prikazivati</string>
    <string name="prefs_showDate_enabled">Datum će se prikazivati</string>
    <string name="prefs_showDate_title">Datum ispod naziva grada</string>
    <string name="preparing_please_wait">Pripremam vaktiju, pričekaj molim...</string>
    <string name="real_time">Stvarno vrijeme</string>
    <string name="saturday">sub</string>
    <string name="search_menu_title">Search</string>
    <string name="separate_juma_settings">Posebne postavke za džumu</string>
    <string name="settings">Postavke</string>
    <string name="share_using">Podijeli koristeći...</string>
    <string name="silent_description">Zvukovi se isključuju nastupanjem namaza</string>
    <string name="silent_description_sunrise">Zvukovi se uključuju sa izlaskom sunca</string>
    <string name="silent_disabled_manually">Zvukovi uključeni ručno</string>
    <string name="silent_set_manually">Zvukovi isključeni ručno</string>
    <string name="silent_was_blocked_by_dnd_revoke">Uključivanje zvukova nije uspjelo zbog nedostatka DnD permisije</string>
    <string name="skip_alarm">Preskoči alarm</string>
    <string name="skip_notification">Preskoči notifikaciju</string>
    <string name="skip_silent">Preskoči gašenje zvukova</string>
    <string name="standard_time">Standardno vrijeme</string>
    <string name="standard_time_12_13">Standardno vrijeme (12h/13h)</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="statusbar_notification">Stalna notifikacija</string>
    <string name="statusbar_notification_off">Stalna notifikacija isključena</string>
    <string name="statusbar_notification_on">Stalna notifikacija će se prikazivati u statusnoj traci</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="sunday">ned</string>
    <string name="system_settings">Sistemske postavke</string>
    <string name="thursday">čet</string>
    <string name="tuesday">uto</string>
    <string name="turn_alarm_on">Uključi alarm</string>
    <string name="turn_notification_on">Uključi notifikaciju</string>
    <string name="turn_off">Ugasi</string>
    <string name="turn_on">Uključi</string>
    <string name="turn_silent_on">Uključi gašenje zvukova</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="vaktija_url">vaktija.ba</string>
    <string name="wednesday">sri</string>
</resources>
