<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingTop="16.0dip" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_system_settings_info" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center_vertical" android:id="@id/doze_mode_check_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:src="@drawable/ic_check_circle" />
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip">
                        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_doze_mode" />
                        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:id="@id/doze_mode_description_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/label_doze_mode_description" />
                    </LinearLayout>
                </LinearLayout>
                <Button android:textColor="@color/buttons_text_color" android:layout_gravity="end" android:id="@id/doze_settings_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/button_open_settings" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/dnd_mode_wrapper" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip">
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center_vertical" android:id="@id/dnd_mode_check_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:src="@drawable/ic_check_circle" />
                    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip">
                        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_dnd_mode" />
                        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:id="@id/dnd_mode_description_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/label_dnd_mode_description" />
                    </LinearLayout>
                </LinearLayout>
                <Button android:textColor="@color/buttons_text_color" android:layout_gravity="end" android:id="@id/dnd_settings_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/button_open_settings" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <CheckBox android:id="@id/dont_show_again_check" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/label_dont_ask_again" />
        <Button android:textColor="@color/buttons_text_color" android:id="@id/close_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/button_close" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </LinearLayout>
</LinearLayout>